tests/negative/Internal/FunctionPattern.juvix
module FunctionPattern;
  type T :=
    A : T;

  f : (T → T) → T;
  f A := A;
end;
